# metalsharp

./: .clang-tidy  .gitignore  .gitmodules  ADD-A-GAME.md  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  GAME_COMPAT.md  GENUINE_C_PLAN.md  LICENSE  README.md  REFERENCE.md  ROADMAP-XNA-FNA.md  ROADMAP.md  THIRD_PARTY_LICENSES  context.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  game-compatibility.yml
.github/codeql/: codeql-cpp.yml  codeql-js.yml  codeql-rust.yml  codeql-typescript.yml  codeql-vue.yml
.github/hooks/: README.md  pre-commit
.github/workflows/: build-monokickstart.yml  ci-cpp.yml  ci-js.yml  ci-metal.yml  ci-python.yml  ci-rust.yml  ci.yml  codeql.yml  nightly.yml  pr-ci.yml  pr-readiness-check.yml  publish-linux-packages.yml  release.yml
.graphiq/: manifest.json
PLAN/: all-route-empty-input-parity-report.json  contract-spec.json  electron-backend-parity-report.json  rust-to-c-port-checklist.md  setup-worker-parity-report.json
PLAN/c-impl/: binding_contract.c  bottles_backend.c  config_parser.h  d3d12_doctor.c  diagnostics.c  fna_profile.c  hash_table.c  hash_table.h  http_server.c  http_server.h  kt_anti_debug.c  kt_code_integrity.c  kt_es_bridge.c  kt_es_live.c  kt_mod.c  (+16 more)
app/: biome.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src-rust/: Cargo.toml  entitlements.plist  rustfmt.toml
app/src-rust/src/: anticheat.rs  binding_contract.rs  bottles.rs  command_contract.rs  compat_db_v2.rs  d3d12_runtime_doctor.rs  d3dmetal_gptk.rs  d3dmetal_native.rs  diagnostics.rs  doctor_registry.rs  fna_profile.rs  gog.rs  gptk.rs  installer.rs  known_good.rs  launch.rs  launch_validation.rs  launcher_evidence.rs  launcher_profiles.rs  main.rs  metalfx.rs  migrate.rs  migration_policy.rs  mono.rs  platform.rs  prefix_metadata.rs  prefix_runtime.rs  receipt_inventory.rs  release_gates.rs  roadmap_audit.rs  rules.rs  runtime_contracts.rs  runtime_diagnostics.rs  runtime_manifest.rs  safe_mode.rs  save_manager.rs  scan.rs  setup.rs  sharp_library.rs  source_adapters.rs  (+6 more)
app/src-rust/src/kernel_translation/: anti_debug.rs  apc.rs  code_integrity.rs  driver_model.rs  es_bridge.rs  es_live.rs  handle_bridge.rs  handle_callbacks.rs  handle_table.rs  integration.rs  ipc_bridge.rs  mod.rs  nt_to_xnu.rs  probe.rs  thread_notify.rs  types.rs
app/src-rust/src/mtsp/: d3d12sdk.rs  d3dmetal.rs  default_rules.rs  engine.rs  launcher.rs  mod.rs  mscompatdb.rs  observe.rs  pe.rs  recipe.rs  rules.rs  shader_cache.rs
configs/: celeste-arm64-mono.config  celeste-x86-mono.config  generic-fna-mono.config  mscompatdb-rules.schema.json  mtsp-default-rules.json  mtsp-roadmap.md  mtsp-rules.toml  proof-targets.json  rules.toml  stardew-mono.config  terraria-mono.config
contracts/: electron-backend.v1.json
docs/: ARCHITECTURE.md  COMPATIBILITY.md  CONTROLLER-FIX-PLAN.md  DEVELOPER-GUIDE.md  DX12 Pipeline Complete Roadmap.md  ELECTRON-APP.md  GAMES-SUPPORTED.md  MetalSharp Final Roadmap.md  OPENGL-2-4-PLAN.md  OPENGL-BRIDGE-PESHIM-PLAN.md  PE-LOADER.md  README.md  TROUBLESHOOTING.md  USER-GUIDE.md  WIN32-SHIMS.md  anti-cheat-compatibility-boundaries.md  anticheat-hard-route-roadmap.md  backend-rust-to-c-migration-plan.md  crossover-parity-roadmap.md  dotnet-translation-layer.md  dxmt-proton-parity-roadmap.md  dxmt-vulkan-architecture.md  electron-backend-contract.md  host-runtime-abi.md  how-to-use-metalsharp.md  installer-runtime-roadmap.md  launch-architecture.md  launcher-runtime.md  m10-pipeline-map.md  m12-pipeline-map.md  m9-pipeline-map.md  mesa-zink-opengl-roadmap.md  metalsharp-host-shim-inventory.md  mono-runtime-lanes.md  proof-targets.md  proton-runtime-research.md  release-signing.md  runtime-bundles-and-steam-routing.md  vendor-trust-kit.md  wine-119-implementation-runbook.md  (+2 more)
metalsharp-0.19.0/: .clang-format  .gitmodules  CMakeLists.txt
research/: ac6-local-code-recon.md  gptk-dxgi-failure-modes.md  gptk-launch-practices.md  local-gptk-launch-diagnosis.md  local-m12-cache-implementation.md
roadmap-research/: apple-metal-gpu-faults.md  d3d12core-translation-architecture.md  directx12-resource-hazard-docs.md  ecosystem-github.md  github-ecosystem-gpu-hang-patterns.md  local-context.md  official-docs.md  offline-probe-validation-strategy.md
scripts/: audit-electron-launch-routes.mjs  audit-i386-winemetal-provenance.sh  audit-mscompatdb-hook-surface.sh  audit-wine119-objective-completion.sh  audit-wine119-readiness.sh  build-d3d9-metal.sh  bundle_updater.sh  capture-steam-game-proof.sh  compare-runtime-manifests.sh  fetch-wine119-release-assets.sh  install-gptk-runtime.sh  install-steamcmd.sh  install-wine119-parity-home.sh  launch-celeste.sh  launch-rainworld.sh  launch-terraria.sh  preflight-i386-winemetal-build.sh  prepare-wine119-candidate.sh  prepare-wine119-parity-candidates.sh  probe-wine119-parity-backend.sh  run-wine119-live-control-suite.sh  runtime-manifest.sh  setup-amongus-deps.sh  setup-celeste-deps.sh  setup-goldberg-deps.sh  setup-nidhogg2-deps.sh  setup-portal2-deps.sh  setup-rainworld-deps.sh  setup-terraria-deps.sh  test-wine119-live-suite-guards.sh  test-wine119-live-verifier-fixtures.sh  test-wine119-objective-audit-guards.sh  verify-wine119-live-control-suite.sh
shader-presets/: README.md
tests/: CMakeLists.txt  test_audio.cpp  test_d3d11_device.cpp  test_d3d12.cpp  test_d3d12_entrypoint.cpp  test_darwin_sync_map.cpp  test_deferred_context.cpp  test_dxbc.cpp  test_format_translation.cpp  test_glsl_compiler.cpp  test_host_runtime_abi.cpp  test_input.cpp  test_metal_device.cpp  test_metal_renderer.mm  test_opengl_bridge.cpp  test_phase17.cpp  test_phase18.cpp  test_phase19.cpp  test_phase2.mm  test_phase20.cpp  test_phase21.cpp  test_phase22.cpp  test_phase23.cpp  test_phase24.cpp  test_phase5.cpp  test_phase5_error_ext.cpp  test_roadmap.cpp  test_runtime.cpp  test_spirv_cross_sanity.cpp  test_tiled_resources.cpp  test_triangle.mm  test_wgl_context.mm
tests/pe_tests/: d3d11_triangle.cpp  imports.def
(+2427 files in other folders)
